## This file is processed by automake to produce `Makefile.in'.
## Which is, in turn, processed by configure to produce the file `Makefile'.

lib_LTLIBRARIES = libsvn_ra_dav.la

libsvn_ra_dav_la_SOURCES = session.c fetch.c commit.c ra_dav.h props.c

INCLUDES = @SVN_INCLUDES@ @SVN_APR_INCLUDES@ @SVN_NEON_INCLUDES@

## Make libtool be quiet
LIBTOOL = @LIBTOOL@ --silent
